Fix iteration logic in RenderProcessHostDelegate::NotifyAllStreamsRemoved

This CL fixes the iteration bug. Additionally, it refactors classes so that
this can be testable by adding an interface: RenderProcessHostDelegate. This
interface is mocked to track number of function calls.
Also, it changes |render_process_id| from int to uint32_t.

Bug: 802216
Change-Id: I31fb05111ab1d63e5caa1a81e0b6feee55bcecae
Reviewed-on: https://chromium-review.googlesource.com/869251
Commit-Queue: Emircan Uysaler <emircan@chromium.org>
Reviewed-by: Christian Fremerey <chfremer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#530604}
Former-commit-id: 943e253fab89d016d4c5895f5d272af765a8df8f